Style navbar and add font awesome icons

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="icon" href="https://img.icons8.com/office/344/iphone-x.png">
     <!-- Fonts links -->
     <link
       href="https://blogfonts.com/css/aWQ9NTQ0MjYmc3ViPTQyNiZjPW0mdHRmPUtoeWF5LVJlZ3VsYXIudHRmJm49bXlhbm1hci1raHlheQ/Myanmar Khyay.ttf"
